docker-compose/templates/siac-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: siac-bot
  name: siac-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: siac-bot
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/credentials-network: "true"
        io.kompose.service: siac-bot
    spec:
      containers:
        - env:
            - name: BOT_ID
              value: 86d651ea-44b4-4000-83b1-2830bd48fbf8
            - name: ETCD_URL
              value: http://etcd:2379
            - name: SIAC_AUTH_TOKEN
              value: ecf535ae-0a74-416c-a853-7b2156e9edad
            - name: SIAC_URL
              value: https://devenv.accurics.com
          image: patilpankaj212/siac-bot:v1
          name: siac-bot
          ports:
            - containerPort: 9020
          resources: {}
      restartPolicy: Always
status: {}
