docker-compose/templates/credentials_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: credentials-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/credentials-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/credentials-network: "true"
